
****  Fix DPI open array handling issues.

****  Fix error when dotted refers to missing module (#2095). [Alexander Grobman]

****  Fix little endian packed array counting (#2499). [phantom-killua]

****  Fix showing reference locations for BLKANDNBLK (#2170). [Yuri Victorovich]

****  Fix genblk naming to match IEEE (#2686). [tinshark]

****  Fix vpi_release_handle to be called implicitly per IEEE (#2706).

****  Fix tracing empty sc module (#2729).

****  Fix generate for unrolling to be signed (#2730). [yanx21]


* Verilator 4.106 2020-12-02

**    Change -sv option to select 1800-2017 instead of 1800-2005.

***   Check for proper 'local' and 'protected' (#2228).

***   Support $random and $urandom seeds.

***   Support $monitor and $strobe.

***   Support complex function arguments.

***   Support 'super'.

***   Support 'with item.index'.

****  Fix the default GNU Make executable name on FreeBSD (#2553). [Yuri Victorovich]

****  Fix trace signal names getting hashed (#2643).  [Barbara Gigerl]

****  Fix unpacked array parameters near functions (#2639). [Anderson Ignacio da Silva]

****  Fix access to non-overridden base class variable (#2654). [Tobias Rosenkranz]


* Verilator 4.104 2020-11-14

***   Support queue and associative array 'with' statements (#2616).

***   Support queue slicing (#2326).

***   Support associative array pattern assignments and defaults.

***   Support static methods and typedefs in classes (#2615). [Krzysztof Bieganski]

****  Report error on typedef referencing self (#2539). [Cody Piersall]

****  With --debug, turn off address space layout randomization.

****  Fix iteration over mutating list bug in VPI (#2588). [Kaleb Barrett]

****  Fix cast width propagation (#2597). [flex-liu]

****  Fix return from callValueCbs (#2589) (#2605). [Marlon James]

****  Fix WIDTH warnings on comparisons with nullptr (#2602). [Rupert Swarbrick]

****  Fix fault when $fgets, $sscanf, etc used with string (#2604). [Yutetsu TAKATSUKASA]
