@@ -27,6 +27,8 @@ The contributors that suggested a given feature are shown in []. Thanks!
 
 ****  Fix genblk naming to match IEEE (#2686). [tinshark]
 
+****  Fix vpiLeftRange on little-endian memories (#2696). [Marlon James]
+
 ****  Fix vpi_release_handle to be called implicitly per IEEE (#2706).
 
 ****  Fix tracing empty sc module (#2729).
